syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

option go_package = "Lyss/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "lyss.user.v1";

service User {
	// 用户注册
	rpc Register (RegisterRequest) returns (RegisterReply);
	// 用户登录
	rpc Login (LoginRequest) returns (LoginReply);
}

message RegisterRequest {
	string username = 1;
	string password = 2;
	string email = 3;
}

message RegisterReply {
	int64 id = 1;
	string username = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReply {
	string token = 1; // JWT
}
